--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,5 +1,4 @@
 #root {
-  max-width: 95%;
   margin: 0 auto;
   text-align: center;
 }
@@ -28,7 +27,7 @@ body {
   display: flex;
   place-items: start;
   min-width: 320px;
-  height: 100svh;
+  min-height: 100svh;
 }
 
 h1 {
